--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="buttons">
             <button id="next-hint">Next Hint</button>
             <button id="reveal-topic" style="display: none;">Reveal Topic</button>
+            <button id="next-topic" style="display: none;">Next Topic</button>
         </div>
     </div>
 
