--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="sidebar">
+        <h2>Topics</h2>
+        <ul id="topic-list">
+            <!-- Topic list will be populated by JavaScript -->
+        </ul>
+    </div>
     <div class="container">
         <h1 id="topic">❓❓❓</h1>
         <div id="hint-container">
